--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "node bin/dev.js",
     "build": "node bin/build.js",
+    "prod": "node server/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Denis Novikov (dehimer)",
